# Event_N-J

./: .gitignore  README.md  db_input.txt  pyproject.toml
eventnj/: script_eventnj.sh
eventnj/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
eventnj/events/: forms.py  models.py  tasks.py  urls.py  views.py
eventnj/events/management/commands/: create_db.py  create_event.py  create_organizer.py  create_participant.py  create_photo.py  create_reo.py  fill_db.py
eventnj/events/migrations/: 0001_initial.py  0002_auto_20220207_2130.py  0003_remove_photo_event_id.py
eventnj/events/templates/: 404.html  addParticipant_view.html  base.html  dashboard.html  event_details_view.html
eventnj/events/templates/events/: addParticipant_view.html  authenticateParticipant_view.html  dashboard.html  decision_by_mail.html  event_details_view.html  info_send_mail.html  test.html
